@@ -54,6 +54,53 @@ class tx_cfcleague_util_Misc {
 //			Array('LLL:EXT:cfc_league/locallang_db.xml:tx_cfcleague_match_notes.type.ticker', '100'),
 			
 	}
+
+	/**
+	 * 
+	 * Prints out the error
+	 * @param 	String 	$error
+	 */
+	
+	public static function tceError($error, $addinfo='')	{
+		$error_doc = t3lib_div::makeInstance('template');
+		$error_doc->backPath = '';
+
+		$content.= $error_doc->startPage('T3sports error Output');
+		$content.= '
+			<br/><br/>
+			<table border="0" cellpadding="1" cellspacing="1" width="300" align="center">';
+	
+		$content.='	<tr class="bgColor5">
+					<td colspan="2" align="center"><strong>Fehler</strong></td>
+				</tr>';
+	
+		$content.='
+				<tr class="bgColor4">
+					<td valign="top"><img'.t3lib_iconWorks::skinImg('','gfx/icon_fatalerror.gif','width="18" height="16"').' alt="" /></td>
+					<td>'.$GLOBALS['LANG']->sL($error,0).'</td>
+				</tr>';
+		if($addinfo)
+			$content.='
+					<tr class="bgColor4">
+						<td valign="top"></td>
+						<td>'.$addinfo.'</td>
+					</tr>';
+
+
+		$content.='
+				<tr>
+					<td colspan="2" align="center"><br />'.
+				
+					'<form action="'.htmlspecialchars($_SERVER["HTTP_REFERER"]).'"><input type="submit" value="Weiter" onclick="document.location='.htmlspecialchars($_SERVER["HTTP_REFERER"]).'return false;" /></form>'.
+					'</td>
+				</tr>';
+
+		$content.= '</table>';
+
+		$content.= $error_doc->endPage();
+		echo $content;
+		exit();	
+	}
 }
 
 if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/cfc_league/util/class.tx_cfcleague_util_Misc.php']) {
